<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Movie TV</string>
    <string name="popular">Popular</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="now_playing">Now playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="top_rate">Top rate</string>
    <string name="genre">Genre: </string>
    <string name="runtime">Runtime: </string>
    <string name="date">Date: </string>
    <string name="overview">Overview</string>
    <string name="trailer">Trailer</string>
    <string name="category">Category</string>
    <string name="genre_title">Genre</string>
    <string name="mylist">My List</string>
    <string name="minutes"> minutes</string>
    <string name="hint_search" tools:ignore="TypographyEllipsis">Search for a movie, genre,...</string>
</resources>
