<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:isScrollContainer="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/test_2" />

            <TextView
                android:id="@+id/txtPopular"
                android:onClick="choosePopular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/popular"
                android:textColor="#FFFFFF"
                android:textSize="16dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_popular"
                android:layout_width="match_parent"
                android:layout_height="180dp" />

            <TextView
                android:id="@+id/txtNowPlaying"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/now_playing"
                android:textColor="#FFFFFF"
                android:textSize="16dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_nowPlaying"
                android:layout_width="match_parent"
                android:layout_height="180dp" />

            <TextView
                android:id="@+id/txtUpcoming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/upcoming"
                android:textColor="#FFFFFF"
                android:textSize="16dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_upcoming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtTopRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/top_rate"
                android:textColor="#FFFFFF"
                android:textSize="16dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_topRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>