<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#161616"
    android:orientation="vertical"
    tools:ignore="Overdraw">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:isScrollContainer="false">

        <LinearLayout
            android:id="@+id/layoutRecycleViewAll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/test_2"
                android:src="@drawable/background_image_banner"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txtPopular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="choosePopular"
                android:padding="5dp"
                android:text="@string/popular"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_popular"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/txtNowPlaying"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="chooseNowPlaying"
                android:padding="5dp"
                android:text="@string/now_playing"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_nowPlaying"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/txtUpcoming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="chooseUpcoming"
                android:padding="5dp"
                android:text="@string/upcoming"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_upcoming"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/txtTopRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="chooseTopRate"
                android:padding="5dp"
                android:text="@string/top_rate"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_topRate"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginBottom="50dp" />
        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#74000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/app_name"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:padding="5dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/frame_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</androidx.constraintlayout.widget.ConstraintLayout>