<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#111"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contentBanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageViewBanner"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="#FFFFFF"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="h,500:282"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:src="@drawable/background_backdrop"
                app:layout_constraintDimensionRatio="h,500:282"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imagePoster"
                android:layout_width="110dp"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:background="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewBanner"
                app:layout_constraintDimensionRatio="h,500:750"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/titleDetails"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imagePoster"
                app:layout_constraintTop_toTopOf="@+id/imagePoster"
                tools:ignore="SpUsage,UnusedAttribute" />

            <TextView
                android:id="@+id/taglineDetails"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:textColor="#CAC8C8"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imagePoster"
                app:layout_constraintTop_toBottomOf="@+id/titleDetails"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/titleGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/genre"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imagePoster"
                app:layout_constraintTop_toBottomOf="@+id/taglineDetails"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/genreDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/titleGenre"
                app:layout_constraintTop_toBottomOf="@+id/taglineDetails" />

            <TextView
                android:id="@+id/titleTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/runtime"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imagePoster"
                app:layout_constraintTop_toBottomOf="@+id/titleGenre"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/timeDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/titleTime"
                app:layout_constraintTop_toBottomOf="@+id/genreDetails" />

            <TextView
                android:id="@+id/titleDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/date"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imagePoster"
                app:layout_constraintTop_toBottomOf="@+id/titleTime"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/dateDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/titleDate"
                app:layout_constraintTop_toBottomOf="@+id/titleTime" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/ic_star_border_black_24dp"
                app:layout_constraintStart_toEndOf="@+id/imagePoster"
                app:layout_constraintTop_toBottomOf="@+id/dateDetails"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/rateDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="#FFFFFF"
                android:textSize="14dp"
                app:layout_constraintStart_toEndOf="@+id/appCompatImageView2"
                app:layout_constraintTop_toBottomOf="@+id/dateDetails"
                tools:ignore="SpUsage" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/overview"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:text="@string/hint_search"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/textViewVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/trailer"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewVideo" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="#161616">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>